Update 3-01. 프로그래밍 코드 최적화(02.27).md

--- a/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
+++ b/RAP/3-01. 프로그래밍 코드 최적화(02.27).md
@@ -1,5 +1,17 @@
 ## <  핵심 개념 >
-- **1) **
+- **1) RAP 기반 CDS → OData → Fiori Elements 전체 구현 전체 개발 절차**
+- **2) UI 어노테이션 그룹핑(Grouping)**
+- **3) Metadata Extension - List Report 컬럼과 필터 설정 어노테이션**
+- **4) Metadata Extension - `@UI.hidden` 어노테이션**
+- **5) Metadata Extension - `@UI.headerInfo` 화면 상단 정보 설정**
+- **6) BAS - Fiori List Report – View 저장 및 관리 기능**
+- **7) Projection View - 검색 기능 설정 어노테이션 (`@Search.*`)**
+- **8) Metadata Extension - `@Consumption.filter` 필터 동작 설정**
+- **9) BAS - `Manifest.json` 오브젝트 페이지 설정 제거**
+- **10) BAS - 메인 앱 타이틀 변경 방법**
+- **11) Projection View - Value Help(F4) 연결 설정**
+- **12) Projection View - 코드-텍스트 연결 및 표시 순서 설정**
+- **13) 메타데이터에 정의하지 않은 필드의 Fiori 표시 동작**
 
 </br>
 </br>
@@ -59,7 +71,7 @@
 </br>
 </br>
 
-## < RAP 기반 CDS → OData 서비스 → Fiori UI 구현 전체 개발 절차 >
+## < RAP 기반 CDS 생성부터 OData 프리뷰 실행까지의 개발 절차 >
 - `_R_` , `_IR_` 는 Interface(데이터 모델) View를 의미하고, `_C_` , `_CR_` 는 Projection(Consumption) View를 의미
 </br>
 
@@ -461,7 +473,7 @@ annotate view ZDSFLIGHT_CR_B03 with
 - `Metadata Extension` : 화면에 어떻게 보이게 할지(배치·표시)를 구상하는 곳
 </br>
 
-### 1) Projection View에 작성된 어노테이션 (구조 · 검색 · 값도움 · 모델 성격)
+#### 1) Projection View에 작성된 어노테이션 (구조 · 검색 · 값도움 · 모델 성격)
 
 | 어노테이션 | 적용 위치 | 설명 |
 |------------|------------|------|
@@ -772,6 +784,90 @@ annotate view ZDSFLIGHT_CR_B03 with
 </br>
 
 <img width="674" height="184" alt="image" src="https://github.com/user-attachments/assets/8fa32e0b-e2c2-49ae-b896-36da43067a53" />
+</br>
+</br>
+</br>
+</br>
+</br>
+
+### 10) Projection View - Value Help(F4) 연결 설정
+- 해당 필드에 F4 도움말을 연결하고, 선택 시 다른 필드까지 자동으로 매핑해주는 설정
+```abap
+@Consumption.valueHelpDefinition: [{
+    entity: {
+        name: '<ValueHelp_Entity_Name>',   // 연결할 CDS Value Help 뷰
+        element: '<ValueHelp_Key_Field>'   // Value Help에서 선택할 기준 필드
+    },
+    additionalBinding: [{
+        localElement: '<현재뷰_필드>',      // 현재 Projection View의 필드
+        element: '<ValueHelp_필드>'        // Value Help 쪽 필드
+    }]
+}]
+<FieldName>
+```
+```abap
+// Data Definition - ZDSFLIGHT_CR_B03
+
+define root view entity ZDSFLIGHT_CR_B03 as projection on ZDSFLIGHT_IR_B03
+{
+    @Consumption.valueHelpDefinition: [{ 
+        entity: { name: '/DMO/I_Carrier', element: 'AirlineID' },
+        additionalBinding: [{ 
+            localElement: 'Currency', element: 'CurrencyCode'
+        }]
+    }]
+    key Carrid,
+}
+```
+
+<img width="649" height="428" alt="image" src="https://github.com/user-attachments/assets/d155b771-e5a1-4f8b-92af-67098235c9d6" />
+</br>
+</br>
+
+- Value Help 팝업에서 여러 항공사를 선택하면, 선택한 값들이 필터바에 토큰 형태로 자동 반영됨
+<img width="456" height="54" alt="image" src="https://github.com/user-attachments/assets/dc13305c-52ec-478f-a24c-43f6695f48c8" />
+</br>
+</br>
+</br>
+</br>
+</br>
+
+### 11) Projection View - 코드-텍스트 연결 및 표시 순서 설정
+- 코드 필드에 텍스트 필드를 연결하고, 화면에 코드/텍스트를 어떤 순서로 보여줄지 설정하는 어노테이션
+```abap
+@ObjectModel.text.element: ['<텍스트필드>']   // 코드에 연결할 텍스트 필드
+
+@UI.textArrangement: #TEXT_FIRST      // 텍스트 (코드)
+@UI.textArrangement: #TEXT_LAST       // 코드 (텍스트)
+@UI.textArrangement: #TEXT_ONLY       // 텍스트만 표시
+@UI.textArrangement: #TEXT_SEPARATE   // 코드와 텍스트 분리 표시
+
+key <코드필드>
+```
+```abap
+// Data Definition - ZDSFLIGHT_CR_B03
+
+define root view entity ZDSFLIGHT_CR_B03 as projection on ZDSFLIGHT_IR_B03
+{
+    @ObjectModel.text.element: [ 'Carrname' ]
+    @UI.textArrangement: #TEXT_FIRST
+    key Carrid,
+    ...
+    Carrname,
+}
+```
+
+<img width="886" height="324" alt="image" src="https://github.com/user-attachments/assets/1971cedc-eca6-4655-b591-deb6944ab9cc" />
+</br>
+</br>
+</br>
+</br>
+</br>
+
+### 12) 메타데이터에 정의하지 않은 필드의 Fiori 표시 동작
+- Projection View에는 존재하지만 Metadata Extension에 정의하지 않은 필드는 기본 컬럼에는 안 보이지만, Fiori의 컬럼 설정(체크박스)에서 선택 가능하게 나타남
+
+<img width="418" height="371" alt="image" src="https://github.com/user-attachments/assets/feabdec5-35a0-4699-b71e-97d9f6d67d9b" />
 
 </br>
 </br>
@@ -786,4 +882,131 @@ annotate view ZDSFLIGHT_CR_B03 with
 </br>
 
 ### 실습 1
+</br>
 
+<img width="613" height="353" alt="image" src="https://github.com/user-attachments/assets/1748e5b1-02c3-43d0-b69c-401fe8f6d248" />
+</br>
+</br>
+</br>
+
+#### 1) CDS 인터페이스 뷰(Data Definition) 생성
+<img width="550" height="375" alt="image" src="https://github.com/user-attachments/assets/19bc3bd9-edd0-4f62-9d3b-30a793a2ed8a" />
+</br>
+</br>
+
+```abap
+// Data Definition - ZDSPFLI_IR_B03
+
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'interface view'
+@Metadata.ignorePropagatedAnnotations: true
+define root view entity ZDSPFLI_IR_B03 as select from spfli
+association to sairport as _Sairport
+    on $projection.Airpfrom = _Sairport.id
+    or $projection.Airpto = _Sairport.id
+{
+    
+    key carrid as Carrid,
+    key connid as Connid,
+    countryfr as Countryfr,
+    cityfrom as Cityfrom,
+    airpfrom as Airpfrom,
+    _Sairport[ 1: id=$projection.Airpfrom ].name as Airpfrom_TXT,
+    countryto as Countryto,
+    cityto as Cityto,
+    airpto as Airpto,
+    _Sairport[ 1: id=$projection.Airpto ].name as Airpto_TXT,
+    fltime as Fltime,
+    deptime as Deptime,
+    arrtime as Arrtime,
+    @Semantics.quantity.unitOfMeasure: 'Distid'
+    distance as Distance,
+    distid as Distid,
+    fltype as Fltype,
+    period as Period
+}
+```
+</br>
+</br>
+</br>
+
+#### 2) CDS 컨슘션 뷰(루트·Projection View) 생성
+
+<img width="545" height="345" alt="image" src="https://github.com/user-attachments/assets/b5e3fab0-e871-42d5-be32-8d6afc77d478" />
+</br>
+</br>
+
+<img width="545" height="406" alt="image" src="https://github.com/user-attachments/assets/be072e50-ce16-40d8-9755-da6e1e21582b" />
+</br>
+</br>
+
+- `define root view entity` 설정 꼭 하기
+```abap
+// Data Definition - ZDSPFLI_CR_B03
+
+@AccessControl.authorizationCheck: #NOT_REQUIRED
+@EndUserText.label: 'Consumption View (root, Projection View)'
+@Metadata.ignorePropagatedAnnotations: false
+@Metadata.allowExtensions: true
+define root view entity ZDSPFLI_CR_B03 as projection on ZDSPFLI_IR_B03
+{
+    key Carrid,
+    key Connid,
+    Countryfr,
+    Countryto,
+    Airpfrom,
+    Airpfrom_TXT,
+    Airpto,
+    Airpto_TXT,
+    Distance,
+    Distid,
+    Fltype,
+    Period
+}
+```
+</br>
+</br>
+</br>
+
+#### 3) CDS 서비스 정의(Service Definition) 생성 및 컨슘션 뷰 연결
+
+<img width="545" height="362" alt="image" src="https://github.com/user-attachments/assets/631dccbd-dea0-44b1-9e98-e27ae32cfaee" />
+</br>
+</br>
+
+```abap
+@EndUserText.label: 'Service Definition'
+define service ZSPFLI_SRV_B03 {
+  expose ZDSPFLI_CR_B03;
+}
+```
+</br>
+</br>
+</br>
+
+#### 4) CDS 서비스 바인딩(Service Binding) 생성 및 OData 연결
+
+<img width="542" height="365" alt="image" src="https://github.com/user-attachments/assets/3951d61b-48e3-4869-83d2-2d2a08933232" />
+</br>
+</br>
+</br>
+</br>
+</br>
+
+#### 5) CDS 메타데이터 확장(UI Metadata Extension) 생성
+- `@Metadata.allowExtensions: true` → 컨슘션(CR) 뷰에서 메타데이터 확장을 허용하는 필수 설정
+  
+<img width="542" height="347" alt="image" src="https://github.com/user-attachments/assets/197c3291-0304-47ae-9c16-d97263bccb29" />
+</br>
+</br>
+
+<img width="541" height="348" alt="image" src="https://github.com/user-attachments/assets/3d18fc4a-4a02-4337-b4be-dff884e1a756" />
+</br>
+</br>
+</br>
+</br>
+</br>
+
+#### 6) 서비스 바인딩(Service Binding)에서 OData 프리뷰로 실행하여 결과 확인
+
+<img width="587" height="333" alt="image" src="https://github.com/user-attachments/assets/336fcc9f-df8a-441c-80f2-032b208c093b" />
