Update 6-1. 1주차 멘토멘티 실습 코드.md

--- a/RAP/6-1. 1주차 멘토멘티 실습 코드.md
+++ b/RAP/6-1. 1주차 멘토멘티 실습 코드.md
@@ -1,1 +1,621 @@
+## < 실습 코드 >
+</br>
 
+### 멘토 1주차
+#### 1) Main.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel",
+    "sap/ui/model/Filter",
+    "sap/ui/model/FilterOperator",
+    "sap/ui/core/Fragment"
+], (Controller, JSONModel, Filter, FilterOperator, Fragment) => {
+    "use strict";
+
+    return Controller.extend("mentor01.controller.Main", {
+        onInit() {
+            this._oModel = this.getOwnerComponent().getModel();     // oData 모델
+            let oNameModel = new JSONModel();                       
+            this.getView().setModel(oNameModel, "NameModel");       // Name 콤보박스 모델
+            this._oInputModel = new JSONModel();
+            this.getView().setModel(this._oInputModel, "InputModel");   // 입력 값 저장할 모델
+
+            this._oModel.read("/MemoEntitySet", {
+                success: function(oReturn) {
+                    let oData = oReturn.results;
+                    let oResult = [];
+                    let oCheck = [];
+                    for(let i=0; i<oData.length; i++) {
+                        if(oCheck.indexOf(oData[i].Name) === -1) {
+                            oCheck.push(oData[i].Name);
+                            oResult.push({ Name: oData[i].Name });
+                        }
+                    }
+                    oNameModel.setData({ Names: oResult });
+                },
+                error: function() { console.log("이름 로드 실패"); }
+            })
+        },
+        onDetailButton: function(oEvent) {
+            debugger;
+            let oData = oEvent.getSource().getParent().getBindingContext().getObject();
+
+            let oFilter = [];
+            oFilter.push(new Filter("Personid", FilterOperator.EQ, oData.Personid));
+
+            this._oModel.read("/MemoEntitySet", {
+                filters: oFilter,
+                success: function(oReturn) {
+                    this.getView().setModel(new JSONModel({ Detail: oReturn.results }), "DetailModel");
+                    this.getView().byId("idToolbar").setVisible(true);
+                    this.getView().byId("idDetail").setVisible(true);
+                    console.log("read 성공!");
+                }.bind(this),
+                error: function() {
+                    console.log("read 실패!");
+                }
+            })
+        },
+        onSearch: function() {
+            let oFilter = [];
+            if(this._oInputModel.getData().Name) {
+                oFilter.push(new Filter("Name", FilterOperator.EQ, this._oInputModel.getData().Name));
+            }
+            this.byId("idMemoTable").getBinding("items").filter(oFilter);
+            this.getView().byId("idToolbar").setVisible(false);
+            this.getView().byId("idDetail").setVisible(false);
+            // oFilter.push(new Filter("WriteDate", FilterOperator.BT, this._oInputModel.getData().WriteDate, this._oInputModel.getData().WriteDate));
+            
+            // this._oModel.read("/MemoEntitySet",{
+            //     filters: oFilter,
+            //     success: function(oReturn) {
+                    
+            //     }.bind(this),
+            //     error: function() {
+            //         console.log("read 실패!");
+            //     }
+            // })
+        },
+        onCreate: function() {
+            let oModel = new JSONModel();
+            let oDialog = sap.ui.getCore().byId("idCreateDialog");    
+
+            if(oDialog) {      
+                oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    name: "mentor01.view.fragment.Dialog1",        
+                    type: "XML",        
+                    controller: this    
+                }).then(function(oDialog) {
+                    oDialog.setModel(oModel, "CreateDialogModel");
+                    oDialog.open();
+                }.bind(this))
+            }
+        },
+        onUpdate: function() {
+            let oData = this.byId("idMemoTable").getSelectedItem().getBindingContext().getObject();
+            let oModel = new JSONModel(oData);
+            let oDialog = sap.ui.getCore().byId("idUpdateDialog");    
+
+            if(oDialog) {      
+                oDialog.open();
+            }
+            else {
+                Fragment.load({
+                    name: "mentor01.view.fragment.Dialog2",        
+                    type: "XML",        
+                    controller: this    
+                }).then(function(oDialog) {
+                    oDialog.setModel(oModel, "UpdateDialogModel");
+                    oDialog.open();
+                }.bind(this))
+            }
+        },
+        onDelete: function() {
+            let oData = this.byId("idMemoTable").getSelectedItem().getBindingContext().getObject();
+            let sPath = this._oModel.createKey("/MemoEntitySet", {
+                Postid : oData.Postid
+            }) 
+
+            this._oModel.remove(sPath, {
+                success: function() {
+                    sap.m.MessageToast.show("삭제 완료!");
+                    this.getView().byId("idToolbar").setVisible(false);
+                    this.getView().byId("idDetail").setVisible(false);
+                }.bind(this),
+                error: function() {
+                    sap.m.MessageToast.show("삭제 에러!");
+                }
+            })
+        },
+        onClose1: function() {
+            sap.ui.getCore().byId("idCreateDialog").close();
+        },
+        onSave1: function() {
+            let oCreateModel = sap.ui.getCore().byId("idCreateDialog").getModel("CreateDialogModel");
+            let oData = oCreateModel.getData();
+            let oBody = {
+                Personid    : oData.Personid,
+                Name        : oData.Name,
+                Memo        : oData.Memo
+            }
+            this._oModel.create("/MemoEntitySet", oBody, {
+                success: function() {
+                    sap.m.MessageToast.show("Create 성공!");
+                    this.getView().byId("idToolbar").setVisible(false);
+                    this.getView().byId("idDetail").setVisible(false);
+                }.bind(this),
+                error: function(error) {
+                    console.log("Create 에러!", error);
+                }
+            })
+        },
+        onClose2: function() {
+            sap.ui.getCore().byId("idUpdateDialog").close();
+        },
+        onSave2: function() {
+            let oModel = sap.ui.getCore().byId("idUpdateDialog").getModel("UpdateDialogModel");
+            let oData = oModel.getData();
+
+            let sPath = this._oModel.createKey("/MemoEntitySet", {
+                Postid : oData.Postid
+            })
+            let oBody = {
+                Postid      : oData.Postid,
+                Personid    : oData.Personid,
+                Name        : oData.Name,
+                Memo        : oData.Memo
+            }
+            this._oModel.update(sPath, oBody, {
+                success: function() {
+                    sap.m.MessageToast.show("Update 성공!");
+                    this.getView().byId("idToolbar").setVisible(false);
+                    this.getView().byId("idDetail").setVisible(false);
+                }.bind(this),
+                error: function() {
+                    sap.m.MessageToast.show("Update 에러!");
+                }
+            }); 
+        }
+    });
+});
+```
+</br>
+
+#### 2) Main.view.xml
+```html
+<mvc:View controllerName="mentor01.controller.Main"
+    xmlns:f="sap.f"
+    xmlns:layout="sap.ui.layout"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:fb="sap.ui.comp.filterbar"
+    xmlns:core="sap.ui.core"
+    xmlns:t="sap.ui.table"
+    xmlns="sap.m">
+    <f:DynamicPage id="dynamicPageId" showFooter="false" headerExpanded="{/headerExpanded}" toggleHeaderOnTitleClick="{/titleClickable}">
+        <!-- DynamicPage Title -->
+        <f:title>
+            <f:DynamicPageTitle>
+                <f:heading>
+                    <Title text="메모 관리 프로그램"/>
+                </f:heading>
+            </f:DynamicPageTitle>
+        </f:title>
+        <!-- DynamicPage Header -->
+        <f:header>
+            <f:DynamicPageHeader pinnable="false">
+                <f:content>
+                    <fb:FilterBar id="filterbar" persistencyKey="myPersKey" showFilterConfiguration="false" useToolbar="false" search=".onSearch" filterChange=".onFilterChange" afterVariantLoad=".onAfterVariantLoad">
+                        <fb:filterGroupItems>
+                            <fb:FilterGroupItem name="Name" label="이름" groupName="Group1" visibleInFilterBar="true">
+                                <fb:control>
+                                    <ComboBox
+                                        id="idNameCombo"
+                                        selectedKey="{InputModel>/Name}"
+                                        items="{
+                                            path: 'NameModel>/Names',
+					                        sorter: { path: 'Name' }
+                                        }">
+                                        <core:Item key="{NameModel>Name}" text="{NameModel>Name}" />
+                                    </ComboBox>
+                                </fb:control>
+                            </fb:FilterGroupItem>
+                            <!-- <fb:FilterGroupItem name="WriteDate" label="날짜" groupName="Group1" visibleInFilterBar="true">
+                                <fb:control>
+                                    <DatePicker dateValue="{InputModel>/WriteDate}"/>
+                                </fb:control>
+                            </fb:FilterGroupItem> -->
+                        </fb:filterGroupItems>
+                    </fb:FilterBar>
+                </f:content>
+            </f:DynamicPageHeader>
+        </f:header>
+        <f:content>
+            <VBox>
+                <Table id="idMemoTable"
+                        mode="SingleSelectLeft"
+                        selectionChange="onselectionChange"
+                        sticky="HeaderToolbar,ColumnHeaders"
+                        inset="false"
+                        items="{
+                            path: '/MemoEntitySet',
+                            sorter: {
+                                path: 'Postid'
+                            }
+                        }"
+                        class="sapFDynamicPageAlignContent"
+                        width="auto">
+                    <headerToolbar>
+                        <Toolbar>
+                            <Title text="Memo Table" level="H2"/>
+                            <Button text="생성" press="onCreate" />
+                            <Button text="수정" press="onUpdate" />
+                            <Button text="삭제" press="onDelete" />
+                        </Toolbar>
+                    </headerToolbar>
+                    <columns>
+                        <Column width="12em">
+                            <Text text="Post ID" />
+                        </Column>
+                        <Column width="12em">
+                            <Text text="Person ID" />
+                        </Column>
+                        <Column width="12em">
+                            <Text text="Name" />
+                        </Column>
+                        <Column width="12em">
+                            <Text text="Memo" />
+                        </Column>
+                        <Column width="12em">
+                            <Text text="Write Date" />
+                        </Column>
+                        <Column width="12em">
+                            <Text text="Datail" />
+                        </Column>
+                    </columns>
+                    <items>
+                        <ColumnListItem>
+                            <cells>
+                                <Text text="{Postid}" />
+                                <Text text="{Personid}" />
+                                <Text text="{Name}" />
+                                <Text text="{Memo}" />
+                                <Text text="{
+                                    path: 'WriteDate',
+                                    type: 'sap.ui.model.type.DateTime',
+                                    formatOptions: { pattern : 'yyyy-MM-dd' }
+                                }" />
+                                <Button text="버튼" press="onDetailButton"/>
+                            </cells>
+                        </ColumnListItem>
+                    </items>
+                </Table>
+                <Toolbar id="idToolbar" class="sapUiMediumMarginTop" visible="false"/>
+                <t:Table
+                    id="idDetail"
+                    rows="{DetailModel>/Detail}"
+                    selectionMode="None"
+                    paste="onPaste"
+                    visible="false" 
+                    ariaLabelledBy="title">
+                    <t:extension>
+                        <OverflowToolbar style="Clear">
+                            <Title id="title" text="Products"/>
+                        </OverflowToolbar>
+                    </t:extension>
+                    <t:columns>
+                        <t:Column width="11rem">
+                            <Label text="Post Id" />
+                            <t:template>
+                                <Text text="{DetailModel>Postid}"/>
+                            </t:template>
+                        </t:Column>
+                        <t:Column width="11rem">
+                            <Label text="Person Id" />
+                            <t:template>
+                                <Text text="{DetailModel>Personid}"/>
+                            </t:template>
+                        </t:Column>
+                        <t:Column width="11rem">
+                            <Label text="Name" />
+                            <t:template>
+                                <Text text="{DetailModel>Name}"/>
+                            </t:template>
+                        </t:Column>
+                        <t:Column width="11rem">
+                            <Label text="Memo" />
+                            <t:template>
+                                <Text text="{DetailModel>Memo}"/>
+                            </t:template>
+                        </t:Column>
+                        <t:Column width="11rem">
+                            <Label text="WriteDate" />
+                            <t:template>
+                                <Text text="{
+                                    path: 'DetailModel>WriteDate',
+                                    type: 'sap.ui.model.type.DateTime',
+                                    formatOptions: { pattern : 'yyyy-MM-dd' }
+                                }" />
+                            </t:template>
+                        </t:Column>
+                    </t:columns>
+                </t:Table>
+            </VBox>
+        </f:content>
+        <!-- DynamicPage Footer -->
+        <f:footer>
+            <OverflowToolbar>
+                <ToolbarSpacer/>
+                <Button type="Accept" text="Accept"/>
+                <Button type="Reject" text="Reject"/>
+            </OverflowToolbar>
+        </f:footer>
+    </f:DynamicPage>
+</mvc:View>
+```
+</br>
+
+#### 3) Dialog1.fragment.xml
+```html
+<c:FragmentDefinition 
+    xmlns="sap.m" 
+    xmlns:f="sap.ui.layout.form"
+    xmlns:c="sap.ui.core">
+    <Dialog id="idCreateDialog"
+            title="Create Dialog"
+            contentHeight="30%"
+            contentWidth="20%">
+        <content>
+            <f:SimpleForm
+                layout="ColumnLayout"
+                columnsXL="1"
+                columnsL="1"
+                columnsM="1">
+                <f:content>
+                    <Label text="Person ID"/>
+                    <Input value="{CreateDialogModel>/Personid}" />
+                    <Label text="Name"/>
+                    <Input value="{CreateDialogModel>/Name}" />   
+                    <Label text="Memo"/>
+                    <Input value="{CreateDialogModel>/Memo}" />
+                </f:content>
+            </f:SimpleForm>
+        </content>
+        <buttons>
+            <Button text="생성" press=".onSave1" />
+            <Button text="닫기" press=".onClose1" />
+        </buttons>
+    </Dialog>
+</c:FragmentDefinition>
+```
+</br>
+
+#### 4) Dialog2.fragment.xml
+```html
+<c:FragmentDefinition 
+    xmlns="sap.m" 
+    xmlns:f="sap.ui.layout.form"
+    xmlns:c="sap.ui.core">
+    <Dialog id="idUpdateDialog"
+            title="Update Dialog"
+            contentHeight="30%"
+            contentWidth="20%">
+        <content>
+            <f:SimpleForm
+                layout="ColumnLayout"
+                columnsXL="1"
+                columnsL="1"
+                columnsM="1">
+                <f:content>
+                    <Label text="Person ID"/>
+                    <Input value="{UpdateDialogModel>/Personid}" />
+                    <Label text="Name"/>
+                    <Input value="{UpdateDialogModel>/Name}" />   
+                    <Label text="Memo"/>
+                    <Input value="{UpdateDialogModel>/Memo}" />
+                </f:content>
+            </f:SimpleForm>
+        </content>
+        <buttons>
+            <Button text="수정" press=".onSave2" />
+            <Button text="닫기" press=".onClose2" />
+        </buttons>
+    </Dialog>
+</c:FragmentDefinition>
+```
+</br>
+
+#### 5) 결과 확인
+
+<img width="940" height="276" alt="image" src="https://github.com/user-attachments/assets/ffbacab0-aa16-4234-9fb0-e8b918c54ad3" />
+</br>
+</br>
+</br>
+
+### 멘토 2주차
+
+#### 1) manifest.json
+```java
+"routing": {
+  "config": {
+    "routerClass": "sap.m.routing.Router",
+    "controlAggregation": "pages",
+    "controlId": "app",
+    "transition": "slide",
+    "type": "View",
+    "viewType": "XML",
+    "path": "mentor02.view",
+    "async": true,
+    "viewPath": "mentor02.view"
+  },
+  "routes": [
+    {
+      "name": "RouteMain",
+      "pattern": ":?query:",
+      "target": [
+        "TargetMain"
+      ]
+    },
+    {
+      "name": "RouteA",
+      "pattern": "RouteA/{pa}",
+      "target": [
+        "TargetA"
+      ]
+    },
+    {
+      "name": "RouteB",
+      "pattern": "RouteB/{pa}",
+      "target": [
+        "TargetB"
+      ]
+    }
+  ],
+  "targets": {
+    "TargetMain": {
+      "id": "Main",
+      "name": "Main"
+    },
+    "TargetA": {
+      "id": "A",
+      "name": "A"
+    },
+    "TargetB": {
+      "id": "B",
+      "name": "B"
+    }
+  }
+},
+```
+</br>
+
+#### 2) Main.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller"
+], (Controller) => {
+    "use strict";
+
+    return Controller.extend("mentor02.controller.Main", {
+        onInit() {
+        },
+        A_Press: function() {
+            const oRouter = this.getOwnerComponent().getRouter();
+            oRouter.navTo("RouteA", {
+                pa: "Main에서 A로" 
+            });
+        },
+        B_Press: function() {
+            const oRouter = this.getOwnerComponent().getRouter();
+            oRouter.navTo("RouteB", {
+                pa: "Main에서 B로" 
+            });
+        }
+    });
+});
+```
+</br>
+
+#### 3) Main.view.xml
+```html
+<mvc:View controllerName="mentor02.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:l="sap.ui.layout"
+    xmlns="sap.m">
+    <Page id="page" title="Main 화면">
+        <content>
+            <Button text="A로 이동" press="A_Press" type="Emphasized"/>
+            <Button text="B로 이동" press="B_Press"/>
+        </content>
+    </Page>
+</mvc:View>
+```
+</br>
+
+#### 4) A.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller"
+], (Controller) => {
+    "use strict";
+
+    return Controller.extend("mentor02.controller.A", {
+        onInit() {
+            const oRouter = this.getOwnerComponent().getRouter();
+            oRouter.getRoute("RouteA").attachPatternMatched(this.onattachPatternMatched, this);
+        },
+        onattachPatternMatched: function(oEvent) {
+            let str = oEvent.getParameter("arguments").pa;
+            this.byId("AText").setText(str);
+        },
+        onnavButtonPress: function() {
+            const oRouter = this.getOwnerComponent().getRouter();
+            oRouter.navTo("RouteMain");
+        }
+    });
+});
+```
+</br>
+
+#### 5) A.view.xml
+```html
+<mvc:View controllerName="mentor02.controller.A"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:l="sap.ui.layout"
+    xmlns="sap.m">
+    <Page id="page1" title="A 화면" showNavButton="true" navButtonPress="onnavButtonPress">
+        <Text id="AText"/>
+    </Page>
+</mvc:View>
+```
+</br>
+
+#### 6) B.controller.js
+```java
+sap.ui.define([
+    "sap/ui/core/mvc/Controller"
+], (Controller) => {
+    "use strict";
+
+    return Controller.extend("mentor02.controller.B", {
+        onInit() {
+            const oRouter = this.getOwnerComponent().getRouter();
+            oRouter.getRoute("RouteB").attachPatternMatched(this.onattachPatternMatched, this);
+        },
+        onattachPatternMatched: function(oEvent) {
+            let str = oEvent.getParameter("arguments").pa;
+            this.byId("BText").setText(str);
+        },
+        onnavButtonPress: function() {
+            const oRouter = this.getOwnerComponent().getRouter();
+            oRouter.navTo("RouteMain");
+        }
+    });
+});
+```
+</br>
+
+#### 7) B.view.xml
+```html
+<mvc:View controllerName="mentor02.controller.B"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns:l="sap.ui.layout"
+    xmlns="sap.m">
+    <Page id="page2" title="B 화면" showNavButton="true" navButtonPress="onnavButtonPress">
+        <Text id="BText"/>
+    </Page>
+</mvc:View>
+```
+</br>
+
+#### 8) 결과 확인
+
+<img width="501" height="156" alt="image" src="https://github.com/user-attachments/assets/825d25b1-d0d5-4746-a93a-996816916022" />
+</br>
+
+<img width="500" height="362" alt="image" src="https://github.com/user-attachments/assets/da667315-c386-4b29-8697-88e8c222c85f" />
+
+</br>
